--- a/code/frontend/package.json
+++ b/code/frontend/package.json
@@ -13,6 +13,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@iconify/iconify": "^3.1.1",
+    "@iconify/vue": "^4.1.2",
     "axios": "^1.7.7",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
