--- a/code/backend/package.json
+++ b/code/backend/package.json
@@ -21,16 +21,21 @@
     "typeorm:main": "typeorm-ts-node-commonjs -d src/typeorm/dataSource.ts"
   },
   "dependencies": {
+    "@iconify/vue": "^4.1.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/typeorm": "^10.0.2",
+    "bcrypt": "^5.1.1",
     "class-transform": "^0.7.0",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.13.0",
     "postgres": "^3.4.4",
     "reflect-metadata": "^0.2.0",
@@ -44,6 +49,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
