--- a/code/backend/package.json
+++ b/code/backend/package.json
@@ -25,12 +25,14 @@
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.4.5",
+    "@nestjs/serve-static": "^4.0.2",
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/typeorm": "^10.0.2",
     "class-transform": "^0.7.0",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.13.0",
     "postgres": "^3.4.4",
     "reflect-metadata": "^0.2.0",
