--- a/code/frontend/package.json
+++ b/code/frontend/package.json
@@ -16,6 +16,7 @@
     "@iconify/iconify": "^3.1.1",
     "@iconify/vue": "^4.1.2",
     "axios": "^1.7.7",
+    "jwt-decode": "^4.0.0",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
