--- a/code/frontend/package.json
+++ b/code/frontend/package.json
@@ -17,6 +17,8 @@
     "@iconify/vue": "^4.1.2",
     "axios": "^1.7.7",
     "jwt-decode": "^4.0.0",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.2.1",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
