--- a/code/frontend/package.json
+++ b/code/frontend/package.json
@@ -16,6 +16,8 @@
     "@iconify/iconify": "^3.1.1",
     "@iconify/vue": "^4.1.2",
     "axios": "^1.7.7",
+    "docxtemplater": "^3.52.0",
+    "jszip": "^3.10.1",
     "jwt-decode": "^4.0.0",
     "primeicons": "^7.0.0",
     "primevue": "^4.2.1",
