--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Deploy the app to Fly.io
         run: |
           flyctl auth token ${{ secrets.FLY_API_TOKEN }}
-          flyctl deploy --remote-only --app <desprong>
+          flyctl deploy --remote-only --app desprong
 
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
