--- a/code/frontend/package.json
+++ b/code/frontend/package.json
@@ -28,8 +28,8 @@
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^20.16.12",
-    "@types/vue-router": "^2.0.0",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/eslint-config-prettier": "^10.0.0",
     "@vue/eslint-config-typescript": "^14.0.1",
@@ -41,7 +41,7 @@
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.14",
-    "typescript": "~5.5.4",
+    "typescript": "^5.6.3",
     "vite": "^5.4.8",
     "vue-tsc": "^2.1.6"
   }
