--- a/code/frontend/tsconfig.app.json
+++ b/code/frontend/tsconfig.app.json
@@ -5,11 +5,10 @@
   "compilerOptions": {
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     },
-    "types": ["@types/vue-router"]
+    "types": ["vite/client"] 
   }
 }
