--- a/code/backend/package.json
+++ b/code/backend/package.json
@@ -52,11 +52,26 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/bonjour": "^3.5.13",
+    "@types/connect-history-api-fallback": "^1.5.4",
+    "@types/eslint": "^9.6.1",
+    "@types/eslint-scope": "^3.7.7",
     "@types/express": "^4.17.17",
+    "@types/html-minifier-terser": "^7.0.2",
+    "@types/http-proxy": "^1.17.15",
     "@types/jest": "^29.5.2",
+    "@types/minimist": "^1.2.5",
     "@types/node": "^20.3.1",
+    "@types/node-forge": "^1.3.11",
+    "@types/normalize-package-data": "^2.4.4",
+    "@types/parse-json": "^4.0.2",
     "@types/passport-jwt": "^4.0.1",
+    "@types/retry": "^0.12.5",
+    "@types/serve-index": "^1.9.4",
+    "@types/sockjs": "^0.3.36",
     "@types/supertest": "^6.0.0",
+    "@types/webpack-env": "^1.18.5",
+    "@types/ws": "^8.5.13",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "eslint": "^8.42.0",
