--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm install
 
       - name: Build Backend project
-        run: npm run build
+        run: cd code/backend && npm run build
 
   # Unit tests for backend
   unit-tests-backend:
@@ -41,12 +41,11 @@ jobs:
           node-version: "20"
 
       - name: Install dependencies for Backend
-        run: npm install
+        run: cd code/backend && npm install
 
       - name: Run backend unit tests
-        run: npm run test # Run Jest unit tests for Backend
+        run: cd code/backend && npm run test
 
-  # Integration tests for backend
   integration-tests-backend:
     runs-on: ubuntu-latest
     needs: unit-tests-backend
@@ -60,10 +59,10 @@ jobs:
           node-version: "20"
 
       - name: Install dependencies for Backend
-        run: npm install
+        run: cd code/backend && npm install
 
       - name: Run integration tests for Backend
-        run: npm run test:e2e # Run Jest E2E tests for Backend
+        run: cd code/backend && npm run test:e2e
 
   # Build and Push Backend Docker Image
   publish-backend:
@@ -85,7 +84,7 @@ jobs:
 
       - name: Build and Push Backend Docker image
         run: |
-          docker build -f Dockerfile.backend -t ghcr.io/${{ github.repository }}:backend-latest .
+          docker build -f code/Dockerfile.backend -t ghcr.io/${{ github.repository }}:backend-latest .
           docker push ghcr.io/${{ github.repository }}:backend-latest
 
   # Build and Push Frontend Docker Image
@@ -108,5 +107,5 @@ jobs:
 
       - name: Build and Push Frontend Docker image
         run: |
-          docker build -f Dockerfile.frontend -t ghcr.io/${{ github.repository }}:frontend-latest .
+          docker build -f code/Dockerfile.frontend -t ghcr.io/${{ github.repository }}:frontend-latest .
           docker push ghcr.io/${{ github.repository }}:frontend-latest
