--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm install
 
       - name: Build Backend project
-        run: cd code/backend && npm run build
+        run: npm run build
 
   # Unit tests for backend
   unit-tests-backend:
@@ -41,10 +41,10 @@ jobs:
           node-version: "20"
 
       - name: Install dependencies for Backend
-        run: cd code/backend && npm install
+        run: npm install
 
       - name: Run backend unit tests
-        run: cd code/backend && npm run test
+        run: npm run test
 
   integration-tests-backend:
     runs-on: ubuntu-latest
