--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,9 @@ jobs:
           node-version: "20"
 
       - name: Install dependencies for Backend
-        run: npm install
+        run: |
+          cd code/backend
+          npm install
 
       - name: Build Backend project
         run: |
