--- a/code/backend/package.json
+++ b/code/backend/package.json
@@ -32,6 +32,7 @@
     "@nestjs/serve-static": "^4.0.2",
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/typeorm": "^10.0.2",
+    "@testcontainers/postgresql": "^10.15.0",
     "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
     "class-transform": "^0.7.0",
