please work now

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,8 +96,8 @@ jobs:
 
       - name: Build and Push Backend Docker image
         run: |
-          docker build -f code/Dockerfile.backend -t ghcr.io/${{ github.repository }}:backend-latest .
-          docker push ghcr.io/${{ github.repository }}:backend-latest
+          docker build -f code/Dockerfile.backend -t ghcr.io/$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]'):backend-latest .
+          docker push ghcr.io/$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]'):backend-latest
 
   # Build and Push Frontend Docker Image
   publish-frontend:
@@ -119,5 +119,5 @@ jobs:
 
       - name: Build and Push Frontend Docker image
         run: |
-          docker build -f code/Dockerfile.frontend -t ghcr.io/${{ github.repository }}:frontend-latest .
-          docker push ghcr.io/${{ github.repository }}:frontend-latest
+          docker build -f code/Dockerfile.frontend -t ghcr.io/$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]'):frontend-latest .
+          docker push ghcr.io/$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]'):frontend-latest
