--- a/code/Dockerfile.frontend
+++ b/code/Dockerfile.frontend
@@ -11,7 +11,7 @@ COPY frontend/package*.json ./
 RUN npm install
 
 # Copy the rest of the application files
-COPY frontend/ .
+COPY codefrontend/ .
 
 # Build the frontend application
 RUN npm run build
