--- a/code/backend/package.json
+++ b/code/backend/package.json
@@ -50,6 +50,7 @@
     "uuid": "^11.0.3"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.9",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
