--- a/code/compose.yml
+++ b/code/compose.yml
@@ -2,7 +2,7 @@ services:
   app:
     build:
       context: .
-      dockerfile: Dockerfile.backend
+      dockerfile: backend/Dockerfile
     env_file:
       - .env
     ports:
@@ -23,7 +23,7 @@ services:
   frontend:
     build:
       context: .
-      dockerfile: Dockerfile.frontend
+      dockerfile: frontend/Dockerfile
     ports:
       - "5173:5173"
     depends_on:
