--- a/fly.toml
+++ b/fly.toml
@@ -1,26 +1,24 @@
-# fly.toml app configuration file generated for desprong on 2024-11-27T13:21:54Z
-#
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
+app = "desprong" 
 
-app = 'desprong'
-primary_region = 'cdg'
 
-[build]
+[[services]]
+  internal_port = 5173  
+  ports = [{ port = 80 }]  
+  protocol = "tcp"
+  build = {
+    image = "ghcr.io/thomas-more-digital-innovation/2425-sprong-001-opvolgingssystyeem:frontend-latest" 
+  }
 
-[env]
-  PORT = '8080'
 
-[http_service]
-  internal_port = 8080
-  force_https = true
-  auto_stop_machines = 'stop'
-  auto_start_machines = true
-  min_machines_running = 0
-  processes = ['app']
+[[services]]
+  internal_port = 3000 
+  ports = [{ port = 8080 }]  
+  protocol = "tcp"
+  build = {
+    image = "ghcr.io/thomas-more-digital-innovation/2425-sprong-001-opvolgingssystyeem:backend-latest"  
+  }
 
-[[vm]]
-  memory = '1gb'
-  cpu_kind = 'shared'
-  cpus = 1
-  memory_mb = 1024
+[[services]]
+  internal_port = 5432  
+  ports = [{ port = 5432 }]  
+  protocol = "tcp"
