--- a/fly.toml
+++ b/fly.toml
@@ -2,23 +2,19 @@ app = "desprong"
 
 
 [[services]]
-  internal_port = 5173  
-  ports = [{ port = 80 }]  
+  internal_port = 5173
   protocol = "tcp"
-  build = {
-    image = "ghcr.io/thomas-more-digital-innovation/2425-sprong-001-opvolgingssystyeem:frontend-latest" 
-  }
+  ports = [{ port = 80 }]
+
+  [services.build]
+  image = "ghcr.io/thomas-more-digital-innovation/2425-sprong-001-opvolgingssystyeem:frontend-latest"
 
 
 [[services]]
   internal_port = 3000 
   ports = [{ port = 8080 }]  
   protocol = "tcp"
-  build = {
-    image = "ghcr.io/thomas-more-digital-innovation/2425-sprong-001-opvolgingssystyeem:backend-latest"  
-  }
 
-[[services]]
-  internal_port = 5432  
-  ports = [{ port = 5432 }]  
-  protocol = "tcp"
+
+[services.build]
+  image = "ghcr.io/thomas-more-digital-innovation/2425-sprong-001-opvolgingssystyeem:backend-latest"
