--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,4 +1,4 @@
-name: CD
+name: Deploy to Fly.io
 
 on:
   workflow_run:
@@ -7,38 +7,23 @@ on:
       - completed
 
 jobs:
-  deploy-backend:
+  deploy:
+    name: Deploy to Fly.io
     runs-on: ubuntu-latest
+    concurrency: deploy-group
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Setup Flyctl
         uses: superfly/flyctl-actions/setup-flyctl@master
+        with:
+          version: "latest"
 
-      - name: Deploy Backend
+      - name: Deploy the app to Fly.io
         run: |
-          flyctl deploy \
-            --image ghcr.io/${{ github.repository }}/backend-latest \
-            --app your-backend-app-name \
-            --remote-only
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+          flyctl auth token ${{ secrets.FLY_API_TOKEN }}
+          flyctl deploy --remote-only --app desprong
 
-  deploy-frontend:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Flyctl
-        uses: superfly/flyctl-actions/setup-flyctl@master
-
-      - name: Deploy Frontend
-        run: |
-          flyctl deploy \
-            --image ghcr.io/${{ github.repository }}/frontend-latest \
-            --app  \
-            --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
