--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,9 +19,12 @@ jobs:
         uses: superfly/flyctl-actions/setup-flyctl@master
         with:
           version: "latest"
-
+          
       - name: Deploy the app to Fly.io
         run: |
+          flyctl auth token ${{ secrets.FLY_API_TOKEN }}
+          flyctl apps list
+          flyctl apps set-context --app desprong --org personal
           flyctl deploy --remote-only --app desprong
         env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }} 
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
