--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,6 +107,21 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Setup Node.js for Frontend
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+
+      - name: Install dependencies for Frontend
+        run: |
+          cd code/frontend
+          npm install
+
+      - name: Build Frontend project
+        run: |
+          cd code/frontend
+          npm run build
+
       - name: Set up Docker Buildx for Frontend
         uses: docker/setup-buildx-action@v3
 
@@ -119,5 +134,5 @@ jobs:
 
       - name: Build and Push Frontend Docker image
         run: |
-          docker build -f code/frontend/Dockerfile -t ghcr.io/$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]'):frontend-latest ./code
+          docker build -f code/frontend/Dockerfile -t ghcr.io/$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]'):frontend-latest ./code/frontend
           docker push ghcr.io/$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]'):frontend-latest
