--- a/code/frontend/Dockerfile
+++ b/code/frontend/Dockerfile
@@ -11,7 +11,7 @@ COPY package*.json ./
 RUN npm install
 
 # Copy the rest of the application files
-COPY . .
+COPY frontend/ .
 
 # Build the frontend application
 RUN npm run build
