--- a/code/frontend/Dockerfile
+++ b/code/frontend/Dockerfile
@@ -5,7 +5,7 @@ FROM node:20-slim AS build
 WORKDIR /app
 
 # Copy the package.json and package-lock.json (or yarn.lock)
-COPY package*.json ./
+COPY frontend/package*.json ./
 
 # Install dependencies
 RUN npm install
