--- a/code/frontend/Dockerfile
+++ b/code/frontend/Dockerfile
@@ -5,17 +5,17 @@ FROM node:20-slim AS build
 WORKDIR /app
 
 # Copy the package.json and package-lock.json (or yarn.lock)
-COPY frontend/package*.json ./
+COPY package*.json ./
 
 # Install dependencies
 RUN npm install
 
 # Copy the rest of the application files
-COPY frontend/ .
+COPY . ./
 
 # Build the frontend application
 RUN npm run build
-
+ 
 # Install the serve package globally to serve the built files
 RUN npm install -g serve
 
