--- a/code/frontend/Dockerfile
+++ b/code/frontend/Dockerfile
@@ -4,23 +4,29 @@ FROM node:20-slim AS build
 # Set the working directory in the container
 WORKDIR /app
 
-# Copy the package.json and package-lock.json (or yarn.lock)
+# Copy only the package.json and package-lock.json first (for caching)
 COPY package*.json ./
 
 # Install dependencies
 RUN npm install
 
 # Copy the rest of the application files
-COPY . ./
+COPY . .
 
 # Build the frontend application
 RUN npm run build
  
+# Use a smaller base image for the final output
+FROM node:20-slim
+
 # Install the serve package globally to serve the built files
 RUN npm install -g serve
+
+# Copy the build output from the previous stage
+COPY --from=build /app/dist /app/dist
 
 # Expose port 5173 to access the app
 EXPOSE 5173
 
-# Serve the frontend using the static file server (assuming build output is in dist/)
-CMD ["serve", "-s", "dist", "-l", "5173"]
+# Serve the frontend using the static file server
+CMD ["serve", "-s", "/app/dist", "-l", "5173"]
