--- a/code/compose.yml
+++ b/code/compose.yml
@@ -1,8 +1,8 @@
 services:
   app:
     build:
-      context: ./backend
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: ./backend/Dockerfile
     env_file:
       - .env
     ports:
@@ -22,8 +22,8 @@ services:
 
   frontend:
     build:
-      context: ./frontend
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: ./frontend/Dockerfile
     ports:
       - "5173:5173"
     depends_on:
