--- a/code/backend/Dockerfile
+++ b/code/backend/Dockerfile
@@ -4,16 +4,16 @@ FROM node:20-slim as build
 # Set working directory
 WORKDIR /app
 
-# Copy package.json and package-lock.json
-COPY package*.json ./
+# Copy package.json and package-lock.json from the backend directory
+COPY ./backend/package*.json ./
 
 # Install dependencies
 RUN npm install
 
-# Copy rest of the application code
-COPY . .
+# Copy rest of the backend application code (adjust path if necessary)
+COPY ./backend/ ./
 
-# Build application
+# Build the application
 RUN npm run build
 
 # Stage 2: Run the application
@@ -22,7 +22,7 @@ FROM node:20-slim as production
 # Set working directory
 WORKDIR /app
 
-# Copy only the built output and package files from the build stage
+# Copy only the built output (dist folder) and package files from the build stage
 COPY --from=build /app/dist ./dist
 COPY --from=build /app/package*.json ./
 
@@ -32,8 +32,8 @@ RUN npm install --omit=dev
 # Set the environment variables
 ENV NODE_ENV=production
 
-# Expose port 3000
+# Expose port 3000 (or the port your app listens on)
 EXPOSE 3000
 
-# Command to run the app
+# Command to run the app (make sure this script exists in package.json)
 CMD [ "npm", "run", "start:prod" ]
