--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,8 +11,20 @@ jobs:
     runs-on: ubuntu-latest
     environment: Hosting
     steps:
+
+      - name: Debug Connection
+        run: |
+          echo "Testing connection..."
+          ping -c 4 161.35.20.135
+
+      - name: Debug SSH Key
+        run: |
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" | head -n 2
+
+
       - name: Checkout code
         uses: actions/checkout@v4
+
 
       - name: Deploy to Droplet
         uses: appleboy/ssh-action@v1.1.0
