--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -25,6 +25,7 @@ jobs:
           port: 22
 
           script: |
+            pwd
             cd ../opt/desprong
             docker-compose down
             docker pull ghcr.io/vandycktoon/opvolgingssysteem:backend-latest
