--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,10 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     environment: Hosting
     steps:
-
       - name: Checkout code
         uses: actions/checkout@v4
-
 
       - name: Deploy to Droplet
         uses: appleboy/ssh-action@v1.1.0
@@ -27,6 +25,8 @@ jobs:
           script: |
             cd ../opt/desprong
             docker-compose down
+            docker rmi frontend-latest backend-latest
             docker pull ghcr.io/vandycktoon/opvolgingssysteem:backend-latest
             docker pull ghcr.io/vandycktoon/opvolgingssysteem:frontend-latest
             docker-compose up --build -d
+            docker image prune -f
