--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -26,8 +26,7 @@ jobs:
             pwd 
             cd ../opt/desprong
             docker-compose down
-            docker rmi frontend-latest backend-latest
             docker pull ghcr.io/vandycktoon/opvolgingssysteem:backend-latest
             docker pull ghcr.io/vandycktoon/opvolgingssysteem:frontend-latest
-            docker-compose up --build -d
+            sudo docker-compose up --build -d
             docker image prune -f
