--- a/code/backend/package.json
+++ b/code/backend/package.json
@@ -64,6 +64,7 @@
     "@types/http-proxy": "^1.17.15",
     "@types/jest": "^29.5.2",
     "@types/minimist": "^1.2.5",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
     "@types/node-forge": "^1.3.11",
     "@types/normalize-package-data": "^2.4.4",
