--- a/code/backend/package.json
+++ b/code/backend/package.json
@@ -39,7 +39,7 @@
     "class-transform": "^0.7.0",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^2.0.1",
     "multer-s3": "^3.0.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -47,6 +47,7 @@
     "postgres": "^3.4.4",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "tar-fs": "^3.0.9",
     "typeorm": "^0.3.20",
     "uuid": "^11.0.3"
   },
